<resources>
    <string name="app_name">NatureLens</string>
    <string name="menu_home">Home</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_settings">Settings</string>
    <string name="pick_up_image">pick up Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="success_text">Yay, we identified the plant!</string>
    <string name="analysis_completed">Analysis Completed</string>
    <string name="more_info_about_plant">more info about plant</string>
    <string name="we_re_sorry">We’re sorry!</string>
    <string name="we_cannot_identify_your_plant">We cannot identify your plant.</string>
    <string name="try_the_photo_again_from_a_different_angle">Try the photo again from a different angle.</string>
    <string name="not_found">Not found</string>
    <string name="search">Search</string>
    <string name="more_pictuers">more pictuers :</string>
    <string name="you_have_not_save">you have not save</string>
    <string name="you_can_add_save_by_clike_me">You can add save by clike "BookMark" icon</string>
    <string name="learn_about_plants">learn about plants</string>
    <string name="language">language</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="popular_plants">Popular Plants</string>
    <string name="explore_plants">Explore Plants</string>
    <string name="plant_info">plant info</string>
    <string name="scan_and_identify_the_plant">live scan</string>
    <string name="medicine">Medicine</string>
    <string name="rare">Rare</string>
    <string name="poison">Poison</string>
    <string name="ornamental">Ornamental</string>
    <string name="themes">Themes</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="privacy_policy_1_no_data_collection">1. No Data Collection</string>
    <string name="privacy_policy_1_no_data_collection_content">This App operates offline and does not collect, store, or transmit any personal information or data. Your privacy is respected, and no information about you or your usage of the App is collected.</string>
    <string name="privacy_policy_2_third_party_services">2. Third-Party Services</string>
    <string name="privacy_policy_2_third_party_services_content">As the App does not require internet access, it does not interact with any third-party services or applications. No data is shared with third parties.</string>
    <string name="privacy_policy_3_security">3. Security</string>
    <string name="privacy_policy_3_security_content">Since the App does not collect or store any data, there are no security concerns related to data breaches or unauthorized access to personal information.</string>
    <string name="privacy_policy_4_changes_to_privacy_policy">4. Changes to Privacy Policy</string>
    <string name="privacy_policy_4_changes_to_privacy_policy_content">We may update our Privacy Policy from time to time. Any changes will be communicated through an update to the App. Continued use of the App following any changes to this policy will signify your acceptance of the changes.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms_1_acceptance_of_terms">1. Acceptance of Terms</string>
    <string name="terms_1_acceptance_of_terms_content">By downloading, installing, or using this application (\"App\"), you agree to comply with and be bound by these Terms of Use. If you do not agree to these terms, please do not use the App.</string>
    <string name="terms_2_use_of_the_app">2. Use of the App</string>
    <string name="terms_2_use_of_the_app_content">The App is designed to identify plants using a machine learning model. This App operates entirely offline and does not require an internet connection. You are solely responsible for ensuring that your use of the App complies with all applicable laws and regulations.</string>
    <string name="terms_3_disclaimer_of_warranties">3. Disclaimer of Warranties</string>
    <string name="terms_3_disclaimer_of_warranties_content">The App is provided on an \"as is\" and \"as available\" basis. While the App strives to provide accurate plant identification, we do not guarantee the accuracy or reliability of the model. The App may misidentify plants or incorrectly determine whether a plant is poisonous or rare. You use the App at your own risk.</string>
    <string name="terms_4_limitation_of_liability">4. Limitation of Liability</string>
    <string name="terms_4_limitation_of_liability_content">In no event shall the developers of the App be liable for any direct, indirect, incidental, special, or consequential damages resulting from the use or inability to use the App, including but not limited to any errors or omissions in the content or any loss or damage of any kind incurred as a result of the use of the App.</string>
    <string name="terms_5_user_responsibility">5. User Responsibility</string>
    <string name="terms_5_user_responsibility_content">You are responsible for the safe and proper use of the App. Always exercise caution and consult a professional before handling or consuming any plants. The App is a tool to assist in plant identification and should not be the sole resource relied upon for critical decisions regarding plant safety.</string>
    <string name="terms_6_changes_to_terms">6. Changes to Terms</string>
    <string name="terms_6_changes_to_terms_content">We reserve the right to modify these Terms of Use at any time. Any changes will be effective immediately upon posting the revised Terms of Use within the App. Your continued use of the App following the posting of changes constitutes your acceptance of those changes.</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_information_content">If you have any questions about these Terms of Use or Privacy Policy, please contact us.</string>
    <string name="terms_of_use_and_privacy_policy_alert"><![CDATA[By using the App, you acknowledge that you have read, understood, and agreed to these Terms of Use and Privacy Policy.]]></string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
</resources>