<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SuccessFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageVscan"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:contentDescription="@string/analysis_completed"
            android:scaleType="fitXY" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="3"
            app:cardBackgroundColor="?attr/background"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="100dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:drawablePadding="6dp"
                    android:text="@string/success_text"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableLeftCompat="@drawable/corrcet" />

                <TextView
                    android:id="@+id/tVName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintVertical_bias="0.18"
                    tools:text="ghffhhgfhfhgh" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnForMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    app:cardBackgroundColor="?attr/cardkind"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tVName">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/cardkind"
                        android:gravity="center_vertical"

                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingStart="40dp"
                        android:paddingEnd="40dp">

                        <TextView
                            android:id="@+id/textView26"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/more_info_about_plant"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

<!--                <Button-->
<!--                    android:id="@+id/btnForMore"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="?attr/colorOnSecondaryFixed"-->
<!--                    android:clickable="true"-->
<!--                    android:focusable="true"-->
<!--                    android:padding="10dp"-->
<!--                    android:text="@string/more_info_about_plant"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/tVName"-->
<!--                    tools:visibility="gone" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>